validations and onboarding

--- a/assets/translation/ar-EG.json
+++ b/assets/translation/ar-EG.json
@@ -36,5 +36,16 @@
  "reenter_password": "اعد ادخال كلمه المرور",
  "forget_password_desc": "أدخل بريدك الإلكتروني أدناه، وسنرسل لك تعليمات لإعادة تعيين كلمة المرور",
  "send_otp": "إرسال رمز التحقق",
- "remember_password": "هل تذكرت كلمة المرور؟"
+ "remember_password": "هل تذكرت كلمة المرور؟",
+ "please_fill_field": "يرجى ملء هذا الحقل للمتابعة.",
+ "check_mail_desc": "لقد أرسلنا كلمة مرور لمرة واحدة (OTP) إلى عنوان بريدك الإلكتروني. يرجى التحقق من صندوق الوارد",
+
+ "check_mail": "يرجى التحقق من صندوق الوارد",
+ "close": "اغلاق",
+ "onboarding3": "نموك هو أولويتنا. لنصعد معًا نحو النجاح",
+ "onboarding2": "معًا، نرتقي! الدعم والإرشاد على بُعد خطوة واحدة فقط.",
+ "onboarding1": "تمكين رحلتك من خلال العمل الجماعي والقيادة.",
+ "skip": "تخطي",
+ "get_started": "ابدأ"
+
 }
