language view and extra edits finishing mobile view

--- a/assets/translation/ar-EG.json
+++ b/assets/translation/ar-EG.json
@@ -46,6 +46,9 @@
  "onboarding2": "معًا، نرتقي! الدعم والإرشاد على بُعد خطوة واحدة فقط.",
  "onboarding1": "تمكين رحلتك من خلال العمل الجماعي والقيادة.",
  "skip": "تخطي",
- "get_started": "ابدأ"
-
+ "get_started": "ابدأ",
+ "choose_language": "اختر اللغة",
+ "choose_language_desc": "حدد لغتك المفضلة",
+ "next": "التالي",
+ "name_valid": "الاسم يجب أن يكون على الأقل ٣ أحرف"
 }
